# livesplit-core

./: Cargo.toml
capi/bind_gen/: Cargo.toml
crates/auto-splitting-test/: Cargo.toml  build.rs
crates/auto-splitting-test/src/: lib.rs  main.rs
crates/auto-splitting-test/tests/: main.rs
crates/auto-splitting-test/tests/splitters/: basic.rs  ffi.rs  missing_module.rs  missing_process.rs  process_read.rs  tick_rate.rs  unknown_func.rs  wrong_interface.rs
crates/livesplit-auto-splitting/: Cargo.toml
crates/livesplit-auto-splitting/src/: environment.rs  process.rs  runtime.rs
crates/livesplit-hotkey/: Cargo.toml
crates/livesplit-hotkey/src/: lib.rs
crates/livesplit-hotkey/src/linux/: mod.rs
crates/livesplit-hotkey/src/windows/: mod.rs
src/run/: mod.rs
src/timing/timer/: mod.rs
