[package]
name = "auto-splitting-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "fakemodule"
crate-type = ["cdylib"]

[[bin]]
name = "fakegame"
path = "src/main.rs"

[dependencies]
libloading = "0.7.1"
time = "0.3.5"

[dev-dependencies]
livesplit-auto-splitting = { path = "../livesplit-auto-splitting" }
serial_test = "0.5.1"
